--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -92,7 +92,7 @@
     /*margin-left: 33px;*/
     width: 433px ! important;
     height: 339px;
-    padding-top: 60px ! important;
+    padding-top: 100px ! important;
     padding: 64px;
     /* margin-top: 82px; */
 }
@@ -380,10 +380,22 @@
         height: 250px ! important;
      }
 } 
+@media only screen 
+  and (device-width: 1440px) 
+  and (device-height: 900px) 
+  /*and (orientation: landscape) */
+  /*and (-webkit-min-device-pixel-ratio: 1.5)*/
+   {
+    .iogblock3text{
+        padding-top: 100px ! important;
+        padding-left: 20px ! important; 
+    }
+
+   }
 
 @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
   and (orientation: landscape) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
     .iogblock1text{
@@ -469,7 +481,7 @@
   and (min-width: 1440px) 
   and (max-height: 900px)  {
     .secondblockk{
-        padding-top: 80px ! important;
+        /*padding-top: 80px ! important;*/
     }
     .iogimgblock2{
         height: auto ! important;
@@ -485,6 +497,9 @@
     .iogblock4text{
         margin-top: 100px ! important;
     }
+    .iogblock1text{
+        padding-top: 70px ! important;
+    }
 
   }
    @media only screen 
@@ -498,7 +513,25 @@
     .iogimgblock2{
         height: 595px ! important;
     }
-
+    .iogblock2text{
+        margin-top: 0px ! important;
+    }
+    .iogblock1text{
+        padding-top: 80px ! important;
+    }
+    .iogimg_4 img{
+        margin-top: -61px ! important;
+    }
+    .iogimg_4{
+        margin-left: 0px ! important;
+    }
+    .iogblock4text{
+        padding-top: 0px ! important;
+    }
+    .iogblock3text{
+        padding-top: 65px ! important;
+        padding-left: 20px ! important;
+    }
    
   } 
     @media only screen 
@@ -509,6 +542,26 @@
         .iogimgblock2 {
         height: 365px ! important;
     }
+
+   
+  } 
+    @media only screen 
+  and (device-width: 768px) 
+  and (device-height: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+   .iogimgblock2 img{
+    height: 97% ! important;
+   }
+   .center_block_text{
+    font-size: 13px ! important;
+   }
+   .iogblock3text{
+    padding: 8px ! important;
+   }
+   .firstblockk{
+    letter-spacing: 1px ! important;
+   }
 
    
   } 
