--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -878,6 +878,14 @@ height: 90px;
 
       }
  }
+  @media only screen and (device-width : 360px) and (device-height : 700px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 720px ! important;
+
+      }
+  }
+
  @media only screen 
     and (min-device-width : 411px) 
     and (device-height : 731px){
