--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -496,3 +496,24 @@
       width: 210px ! important;
   }
 }
+@media only screen and (device-width : 401px) and (device-height : 700px){ 
+  .serflip-card{
+        width: 275px ! important;
+     }
+ }
+ @media only screen and (device-width : 400px) and (device-height : 700px){ 
+  .serflip-card{
+        width: 275px ! important;
+     }
+     .serflip-card img{
+      width: 220px ! important;
+     }
+ }
+ @media only screen and (device-width : 401px) and (device-height : 700px){ 
+  .serflip-card{
+        width: 275px ! important;
+     }
+     .serflip-card img{
+      width: 220px ! important;
+     }
+ }
