--- a/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
+++ b/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
@@ -56,6 +56,13 @@
 	}
 
 }
+@media only screen and (device-width : 400px)and (device-height : 700px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
 @media only screen and (device-width : 401px){
 	.img1 img{
 		height: 300px ! important;
