--- a/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
+++ b/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
@@ -25,6 +25,21 @@
 	}
 
 }
+@media only screen and (device-width : 400px)and (device-height : 700px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
+@media only screen and (device-width : 400px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
+
 @media only screen and (device-width : 375px) and (device-height : 667px) {
 	.services_img{
 	     width: 100% ! important ;
