--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -818,9 +818,21 @@
  .new_round-tabfor6{
     margin-left: 11% ! important;
    }
+   .new_wizardNote_for6{
+    right: 11px ! important;
+   }
  }  
 
+@media only screen and (device-width : 411px) and (device-height : 823px){ 
+  .new_round-tabfor6 {
+      margin-left: 35% ! important;
+  }
+}  
 
-
+@media only screen and (device-width : 320px) and (device-height : 568px){ 
+  .new_wizardNote_for6{
+    right: 8px ! important;
+  }
+}  
 
 
