--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -13,6 +13,10 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   padding-top: 50px;
   /*float:right;*/
 }
+.TypecomponentBtnImg img{
+  height: 400px;
+  object-fit: contain;
+}
 .contentheaderNewPage h2{
   letter-spacing: 0.5px;
 }
@@ -952,8 +956,18 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 
 }
 @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
+  and (device-width: 1024px) 
+  and (device-height: 768px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .navigationTitle_for6{
+      left:430px ! important;
+     }
+
+  }
+@media only screen 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
   and (orientation: landscape) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
     .jobformcontent{
@@ -1027,6 +1041,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
      }
      .B4T_ServicesDiv{
       min-height: 215px ! important;
+     }
+     .img1 img{
+      width: 100% ! important;
      }
 
   } 
@@ -1188,6 +1205,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
     }
     .energypagedata p{
       letter-spacing: 0.5px ! important;
+    }
+    .sxSelectHeader__Xlz5r{
+        height: 50px ! important;
     }
 
   } 
