--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -160,3 +160,17 @@
       padding-top: 77px ! important;
     }
   }
+  @media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+  .blogblock{
+    height: 515px ! important;
+
+    }
+
+    .blogbtn1{
+      padding: 7px 0px;
+    }
+  }
