--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -447,7 +447,38 @@
     padding-left: 0px ! important;
   }
 }  
+@media only screen 
+  and (min-width: 1366px) 
+  and (max-height: 1024px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+  .newcard_landscape{
+    width: 300px ! important;
 
+  }
+
+} 
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+  .newcard_landscape{
+    width: 250px ! important;
+
+  }
+
+}  
+@media only screen 
+  and (min-width: 1440px) 
+  and (max-height: 900px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+  .newcard_landscape{
+    width: 295px ! important;
+
+  }
+}
 
 @media only screen and (device-width : 393px) and (device-height : 851px) {
 
