--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -423,6 +423,14 @@
 
    }
 }
+@media only screen 
+    and (device-width : 1440px) 
+    and (device-height : 900px) { 
+  .newcard{
+    width: 340px ! important;
+
+   }
+}
 
 
 @media screen and (max-width: 768px) {
@@ -450,13 +458,22 @@
 } 
 
 @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
   and (orientation: landscape) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
   .newcard{
     width: 235px ! important;
   }
  } 
-
+@media only screen 
+  and (device-width: 1024px) 
+  and (device-height: 768px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    
+    .newcard {
+    width: 255px ! important;
+    }
+}
 
