--- a/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
+++ b/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
@@ -2,6 +2,9 @@
   width: 100%;
   /*height: 556px;*/
 }
+.img1 img{
+	width: 100% ! important;
+}
 @media only screen and (device-width : 411px) and (device-height : 823px) {
 	.services_img{
 	     width: 100% ! important ;
