--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -412,8 +412,8 @@
  }
 
 @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
   and (orientation: portrait) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
     .pt20{
@@ -469,7 +469,21 @@
   and (min-width: 1440px) 
   and (max-height: 900px)  {
     .secondblockk{
-        padding-top: 31px ! important;
+        padding-top: 80px ! important;
+    }
+    .iogimgblock2{
+        height: auto ! important;
+    }
+    .CareerBlockHighDef {
+        position: absolute;
+        right: 43px;
+        width: 427px ! important;
+    }
+    .iogimg_4 img{
+        width: 98%;
+    }
+    .iogblock4text{
+        margin-top: 100px ! important;
     }
 
   } 
