--- a/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
+++ b/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
@@ -42,6 +42,11 @@
   /*padding-top: 50px;*/
   /*float:right;*/
 }
+@media only screen and (device-width : 1440px) and (device-height : 900px) { 
+  .Typecomponent1Img img{
+  width: 475px ! important; 
+  }
+}
 .TypecomponentImg img {
     width: 500px;
     height: 400px;
@@ -100,8 +105,8 @@
 }
 
 @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
   and (orientation: landscape) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
   .Typecomponent1Img{
