--- a/ui/website/src/common/Footer/Footer.css
+++ b/ui/website/src/common/Footer/Footer.css
@@ -580,8 +580,8 @@ ul.no-icon-list1 {
 }
 
   @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
   and (orientation: landscape) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
      .newcard_HD{
@@ -590,6 +590,21 @@ ul.no-icon-list1 {
     .newcard {
     width: 355px ! important;
     }
+
+}
+ @media only screen 
+  and (device-width: 1024px) 
+  and (device-height: 768px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+   .footerdivs {
+    /*width: 180px;*/
+    padding-left: 54px;
+  }
+  .blogdate{
+    margin-top: -54px ! important;
+  }
+   
 }
   @media only screen and (device-width : 375px) and (device-height : 812px) { 
   .responsivefooter{
