--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -1134,6 +1134,84 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 
 
   }   
+   @media only screen and (device-width : 480px) and (device-height : 854px) { 
+    .serflip-card {
+          width: 350px ! important;
+      }
+      .serflip-card img{
+        width: 295px ! important;
+      }
+
+
+  }   
+   @media only screen and (device-width : 600px) and (device-height : 960px) { 
+    .serflip-card {
+          width: 350px ! important;
+          margin-left: 45px; 
+      }
+      .serflip-card img{
+        width: 295px ! important;
+      }
+      .ct-topbar{
+        left:515px ! important;
+      }
+      .B4T_ServicesDiv{
+        width: 530px ! important;
+      }
+      .topnav.responsive{
+            width: 600px ! important;
+            height: 529px ! important;
+            left: -158px ! important;
+      }
+      .newcard_landscape {
+          width: 202px ! important;
+          margin-left: 35px;
+      }
+      #consultdown_img1{
+        left:21em ! important;
+      }
+       #consultdown_img3{
+        left:21em ! important;
+      }
+       #consultdown_img5{
+        left:21em ! important;
+      }
+      #consultdown_img0{
+        height: 106px ! important;
+      }
+      #consultdown_data1 {
+        left: -8% ! important;
+        width: 282px ! important;
+    }
+    #consultdown_img1 {
+        height: 106px ! important;
+        left: 18em ! important;
+    }
+      #consultdown_img2 {
+      left: 1em ! important;
+      height: 100px ! important;
+     }
+      #consultdown_data3 {
+        left: -7% ! important;
+        width: 300px ! important;
+    }
+    #consultdown_img3 {
+        left: 17em ! important;
+        height: 100px ! important;
+    }
+    #consultdown_img4{
+      left: 2em ! important;
+       height: 100px ! important;
+    }
+    #consultdown_data5 {
+        left: -1% ! important;
+        width: 278px ! important;
+    }
+    #consultdown_img5 {
+        left: 20em ! important;
+    }
+
+  }   
    @media only screen and (device-width : 411px) and (device-height : 731px) { 
    
 
