--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -892,6 +892,55 @@ height: 90px;
 
       }
   }
+  @media only screen and (device-width : 375px) and (device-height : 490px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 720px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 384px) and (device-height : 640px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 700px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 240px) and (device-height : 320px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 420px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 412px) and (device-height : 732px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 730px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 320px) and (device-height : 480px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 545px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 480px) and (device-height : 854px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 855px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 375px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 720px ! important;
+
+      }
+  }
  @media only screen 
     and (min-device-width : 411px) 
     and (device-height : 731px){
