--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -209,6 +209,24 @@
 
    
   }
+   @media only screen 
+  and (device-width: 768px) 
+  and (device-height: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .blogbtn1{
+      padding: 7px 0px;
+      width: 180px;
+      float: right;
+
+    }
+    .blogdate{
+      padding-top: 0px ! important;
+    }
+
+
+   
+  }
   @media only screen and (device-width : 320px) and (device-height : 568px) { 
     
      .blogblock {
