--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -712,6 +712,27 @@ border:1px solid #eee ! important;
     }
 
   } 
+   @media only screen and (device-width : 320px) and (device-height : 480px) { 
+     .ct-topbar{
+      left: 264px ! important;
+    }
+    .topnav a.icon {
+      top: -13px;
+      right: -28px;
+     }
+    .topnav.responsive{
+      top: -53px;
+      width: 410px;
+      height: 529px;
+      left: -60px;
+      } 
+      .headerlogo img {
+      height: 60px ! important;
+      /*z-index: 1000;*/
+      margin-left: -70px;
+      margin-top: -5px;
+      }
+   }  
   @media only screen and (device-width : 375px) and (device-height : 700px) { 
   .topnav a.icon {
     top   : -11px;
@@ -719,7 +740,7 @@ border:1px solid #eee ! important;
     color :#585755 ! important
   }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -70px;
     margin-top: -5px;
@@ -766,9 +787,10 @@ border:1px solid #eee ! important;
    .topnav a.icon{
     top:-15px ! important;
     right: -16px ! important;
+     color :#585755 ! important
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -50px;
     margin-top: 12px;
@@ -787,9 +809,10 @@ border:1px solid #eee ! important;
    .topnav a.icon{
     top:-11px ! important;
     right: -16px ! important;
+     color :#585755 ! important
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -50px;
     margin-top: -12px;
@@ -807,9 +830,10 @@ border:1px solid #eee ! important;
    .topnav a.icon{
     top:-11px ! important;
     right: -16px ! important;
+     color :#585755 ! important
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -50px;
     margin-top: -12px;
@@ -835,21 +859,25 @@ border:1px solid #eee ! important;
     /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
-    /*top:-15px ! important;*/
-    /*right: -16px ! important;*/
+     color :#585755 ! important;
+     top: -9px;
+     right: -26px;
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -70px;
     margin-top: -10px;
     }
     .ct-topbar{
-      left: 293px ! important;
+      left: 300px ! important;
        margin-top: 8px;
     }
      .headerflowscroll{
       height: 100px;
+    }
+    .topnav.responsive{
+      left:-26px ! important;
     }
 
   }  
@@ -858,11 +886,12 @@ border:1px solid #eee ! important;
     /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
+     color :#585755 ! important
     /*top:-15px ! important;*/
     /*right: -16px ! important;*/
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -70px;
     margin-top: 0px;
@@ -885,6 +914,46 @@ border:1px solid #eee ! important;
       }
      .ct-topbar{
       left: 333px ! important;
+       margin-top: 8px;
+    }
+     .headerflowscroll{
+      height: 100px;
+    }  
+   }
+   @media only screen and (device-width : 240px) and (device-height : 320px) { 
+    .headerlogo img{
+      height: 40px ! important;
+      margin-left: -70px ! important;
+    }
+    .topnav a.icon {
+        top: -10px;
+        right: -32px;
+         color :#585755 ! important
+      }
+      .topnav.responsive {
+        position: absolute;
+        background-color: #333333f5;
+        top: -56px;
+        width: 363px;
+        height: 333px;
+        left: -92px;
+        z-index: 1000;
+        padding-top: 10px;
+    }
+    .topnav a {
+        padding: 11px 3px;
+      }
+      .topnav.responsive a {
+          font-size: 9px ! important;
+      }
+      .dropdown .dropbtn{
+        font-size: 9px ! important;
+      }
+    .resbanner {
+        height: 770px ! important;
+      }
+     .ct-topbar{
+      left: 189px ! important;
        margin-top: 8px;
     }
      .headerflowscroll{
@@ -1023,7 +1092,15 @@ border:1px solid #eee ! important;
         height: 90px ! important;
       }
    }
+ @media only screen and (device-width : 480px) and (device-height : 854px) { 
+  .ct-topbar{
+    left:416px ! important;
+  }
+  .topnav a.icon{
+    right: -18px ! important;
+  }
 
+ }
 
    @media only screen and (device-width : 412px) and (device-height : 732px) { 
    .topnav a{
